# hexagonal_arquitecture_fastApi_example

./: .env.example  .gitignore  README.md  pyproject.toml
src/hexagonal_arquitecture_example/: __init__.py  bootstrap.py  controller.py  main.py
src/hexagonal_arquitecture_example/application/: dto.py  order_service.py
src/hexagonal_arquitecture_example/building_blocks/: db.py
src/hexagonal_arquitecture_example/domain/: errors.py  fake_order_repository.py  order.py
src/hexagonal_arquitecture_example/infrastructure/: fakeOrderRepository.py  sqlModelOrderRepository.py
src/hexagonal_arquitecture_example/infrastructure/models/: order_model.py
tests/: conftest.py
tests/integration/: test_controllers.py
tests/unit/application/: test_order_service.py
tests/unit/domain/: test_order.py
tests/unit/infrastructure/: test_order_repository.py  test_sqlmodel_repository.py
